# mcpserverexample

./: README.md  main.py  pyproject.toml
src/mcp_server_deepdive_deployment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
